--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,10 +2,8 @@
 
 <table>
   <tr>
-    <th>Table num</th>
-    <th>Items</th>
-    <th>Prices</th>
-    <th></th>
+    <th>Table Number</th>
+    <th>Total</th>
     <th></th>
     <th></th>
   </tr>
@@ -13,7 +11,6 @@
 <% @orders.each do |order| %>
   <tr>
     <td><%= order.table_num %></td>
-    <td><%= order.items %></td>
     <td><%= order.prices %></td>
     <td><%= link_to 'Show', order %></td>
     <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
