--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,21 +1,17 @@
 <h1>Orders</h1>
 
-<table>
+<table class="CSSTableGenerator">
   <tr>
     <th>Table</th>
-    <th></th>
     <th>Total</th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @orders.each do |order| %>
   <tr>
     <td><%= order.table_num %></td>
-    <td></td>
     <td><%= order.total %></td>
-    <td><%= link_to 'Show', order %></td>
-    <td><%= link_to 'Remove', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td style="text-align: center; width: 80px"><%= link_to 'Show', order %></td>
+    <td style="text-align: center; width: 80px"><%= link_to 'Remove', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
