--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,7 +5,7 @@
   <%= @order.table_num %>
 </p>
 
-<table>
+<table class="CSSTableGenerator">
   <tr>
     <th>Item</th>
     <th>Price</th>
@@ -13,7 +13,7 @@
 
   <% @order.get_items.each_with_index do |item, index| %>
       <tr>
-        <td><%= item %></td>
+        <td style="text-align:left"><%= item %></td>
         <td><%= @order.get_prices[index] %></td>
       </tr>
   <% end %>
